# memory-shell-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/memory_shell_mcp/: __init__.py
