[project]
name = "memory-shell-mcp"
version = "0.1.0"
description = "Java内存马检测和清理工具的MCP服务器 - Memory Shell Detector MCP Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RuoJi6", email = "ruoji6@example.com"}
]
keywords = ["mcp", "memory-shell", "java", "security", "detector", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastmcp>=2.0.0",
    "paramiko>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/RuoJi6/memory-shell-mcp"
Repository = "https://github.com/RuoJi6/memory-shell-mcp"
Issues = "https://github.com/RuoJi6/memory-shell-mcp/issues"

[project.scripts]
memory-shell-mcp = "memory_shell_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_shell_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
